- TODO [Tweak] Config option to disable iron bloom modifications from helve hammers
- TODO [Compatibility] Stop knapster from autocompleting when hitting in flip tool mode
- TODO [Minor] Fix edge case if players that try to remove tongs while setting the flip tool mode when they are required
- TODO Store overall transform for flip tool mode to properly reconstruct recipe outline rotation.
    Current method can have bugs and is harder to maintain.

Done:
- [Compatibility] Fix crash with toolsmith