@@ -15,15 +15,15 @@ namespace SmithingPlus.ToolRecovery;
 [HarmonyPatchCategory(Core.ToolRecoveryCategory)]
 public class ToolHeadRepairPatches
 {
-    // Clamp durability if configs changed max durability
     private static void ClampDurability(ItemStack itemstack)
     {
-        var maxDurability = itemstack.Collectible.GetMaxDurability(itemstack);
         if (!itemstack.Attributes.HasAttribute("durability")) return;
+        var maxDurability = itemstack.Collectible.GetMaxDurability(itemstack);
         var durability = itemstack.Attributes.GetInt("durability");
         itemstack.Attributes.SetInt("durability", Math.Min(durability, maxDurability));
     }
     
+    // Clamp durability if configs changed max durability
     [HarmonyPostfix]
     [HarmonyPatch(typeof(CollectibleObject), nameof(CollectibleObject.SetDurability))]
     public static void Postfix_SetDurability(ItemStack itemstack, int amount)
@@ -34,16 +34,17 @@ public class ToolHeadRepairPatches
         ClampDurability(itemstack);
     }
 
-    // Clamp durability if configs changed max durability
-    [HarmonyPostfix]
+    // Clamp durability if configs changed max durability. This is a prefix because DamageItem breaks the tool!
+    [HarmonyPrefix]
     [HarmonyPatch(typeof(CollectibleObject), nameof(CollectibleObject.DamageItem))]
-    public static void Postfix_DamageItemy(IWorldAccessor world,
+    public static void Prefix_DamageItem(
+        IWorldAccessor world,
         Entity byEntity,
         ItemSlot itemslot,
         int amount = 1)
     {
-        var itemstack = itemslot.Itemstack;
-        if (!itemstack.Collectible.HasBehavior<CollectibleBehaviorRepairableTool>()) return;
+        var itemstack = itemslot?.Itemstack;
+        if (!(itemstack?.Collectible.HasBehavior<CollectibleBehaviorRepairableTool>() ?? false)) return;
         var brokenCount = itemstack.GetBrokenCount();
         if (brokenCount < 0) return;
         ClampDurability(itemstack);
